samples/_failures_safe/1761093957_7fd0d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a96d483.c: In function ‘main’:
./samples/SAFE/__tmp_1a96d483.c:163:42: error: expected ‘)’ at end of input
  163 |     if (scanf("%d", &edges) != 1 || edges
      |        ~                                 ^
      |                                          )
./samples/SAFE/__tmp_1a96d483.c:163:5: error: expected declaration or statement at end of input
  163 |     if (scanf("%d", &edges) != 1 || edges
      |     ^~
